--- a/src/site/_includes/navigation.njk
+++ b/src/site/_includes/navigation.njk
@@ -1,3 +1,7 @@
 <ul class="nav">
-  <li><a href="/" class="home">hawksworx</a></li><li><a href="/blog" class="blog">blog</a></li><li><a href="/speaking">speaking</a></li><li><a href="/about">about</a></li><li><a href="/search" class="search" id="search-link">search</a></li>
+  <li><a href="/" class="home">pvxrecords.com</a></li>
+  <li><a href="/releases" class="blog">releases</a></li>
+  <li><a href="/bands">bands</a></li>
+  <li><a href="/history">history</a></li>
+  <li><a href="/contact">contact</a></li>
 </ul>
