--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href="/fonts/placardmtstd-cond-webfont.woff2" as="font" type="font/woff2" crossorigin>
     <style>{% include "css/main.css" %}</style>
-    <title>{%- if title -%}{{ title }}{%- else -%}Hawksworx - Phil Hawksworth{%- endif -%}</title>
+    <title>{%- if title -%}{{ title }}{%- else -%}Pensamplivox Chicago{%- endif -%}</title>
     <meta name="description" content="{%- if description -%}{{ description }}{%- else -%}Phil Hawksworth's home on the web. Read his blog, ask questions, and find coverage of his recent conference talks about web development.{%- endif -%}"/>
     <link rel="alternate" href="/feed.xml" title="Hawksworx blog feed, by Phil Hawksworth" type="application/atom+xml">
     {% include "favicons.njk" %}
