--- a/src/site/_includes/navigation.njk
+++ b/src/site/_includes/navigation.njk
@@ -1,5 +1,5 @@
 <ul class="nav">
-  <li><a href="/records" class="home">pvxrecords</a></li>
+  <li><a href="/records" class="home">pvxrecords.com</a></li>
   <li><a href="/records" class="blog">records</a></li>
   <li><a href="/artists">artists</a></li>
   <li><a href="/history">history</a></li>
