--- a/src/site/_includes/social.njk
+++ b/src/site/_includes/social.njk
@@ -1,7 +1,7 @@
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@philhawksworth" />
-<meta name="twitter:creator" content="@philhawksworth" />
-<meta property="og:url" content="https://www.hawksworx.com/" />
-<meta property="og:title" content="Phil Hawksworth" />
-<meta property="og:description" content="{%- if description -%}{{ description }}{%- else -%}Phil Hawksworth's home on the web. Read his blog, ask questions, and find coverage of his recent conference talks about web development.{%- endif -%}" />
-<meta property="og:image" content='https://www.hawksworx.com/card-image/{{ page.url | kebab }}card.png' />
+<meta name="twitter:site" content="@joe_sepi" />
+<meta name="twitter:creator" content="@joe_sepi" />
+<meta property="og:url" content="https://pvxrecords.com/" />
+<meta property="og:title" content="Pensamplivox" />
+<meta property="og:description" content="{%- if description -%}{{ description }}{%- else -%}What began as a home for a band of misfits in Wicker Park, Chicago, grew to house many friends from a larger music circle.{%- endif -%}" />
+<meta property="og:image" content='https://pvxrecords.com/card-image/{{ page.url | kebab }}card.png' />
